@@ -2,8 +2,12 @@ body {
     overflow: scroll;
     padding-right: 10px;
     padding-left: 10px;
+    font-family: 'Open Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans', sans-serif;
+}
 .top-bar {
     margin-bottom: 10px;
 }
