@@ -1,8 +1,11 @@
 body {
     overflow: hidden;
-
+    font-family: 'Open Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans', sans-serif;
+}
 .full-width {
     width: 100%;
     margin-left: auto;
