@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/foundation.css"/>
     <link rel="stylesheet" href="css/indexstyle.css"/>
     <link rel="stylesheet" href="css/sweetalert.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <script src="js/vendor/modernizr.js"></script>
 </head>
 <body>
