@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/teststyle.css"/>
     <link rel="stylesheet" href="js/foundation/foundation-icons/foundation-icons.css">
     <link rel="stylesheet" href="css/sweetalert.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <script src="libs/parse-1.3.5.js"></script>
     <script src="js/vendor/modernizr.js"></script>
 </head>
@@ -250,14 +251,12 @@
 
 
         <span data-tooltip aria-haspopup="true" class="has-tip"
-              title="   In the second step you can look without time pressure at the website. You should take a closer look at some criteria. Please, rate every criteria and give reasons."><h4
+              title="In the second step you can look without time pressure at the website. You should take a closer look at some
+    characteristics the developer previously defined. Please rate every charactersitic and mention your reasons for your rating."><h4
                 class="rate-header" id="rating-box-heading">Second Step: Please rate these Characteristics:</h4></span>
-
 
         <a href="#" id="third-step-button" class="button alert finish-button" data-reveal-id="general-aesthetic-modal">Third
             Step</a>
-
-
     </div>
 
 
@@ -321,7 +320,7 @@
     </div>
     <div id="rating-box-pointer">
         <h1>Second Step</h1>
-        Please rate the given attributes in the bottom box!
+        Please rate the given characteristics in the bottom box!
         <br>
         Hide and show the box with by clicking the button on the bottom right!
         <br>
